# websearch_bot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  scraper.py  start.sh
.github/workflows/: ci.yml
llm/: __init__.py  client.py  gemini.py
scraper/: __init__.py  github.py  web.py
tests/: test_github_scraper.py  test_scraper_output_quality.py  test_web_scraper.py  test_websearch.py
ui/: __init__.py  components.py
websearch_bot/: __init__.py  _crawl.py  _github.py  _groq.py  _llm.py  _models.py  _search.py  _select.py
